--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -16,10 +16,10 @@
         <p>Perfil</p>
       </button>
 
-      <button class="icon-button" [ngClass]="{'active' : selectedTab === 'logout'}" expand="block" color="primary" (click)="logout()">
+      <!--<button class="icon-button" [ngClass]="{'active' : selectedTab === 'logout'}" expand="block" color="primary" (click)="logout()">
         <ion-icon name="log-out-outline"></ion-icon>
         <p>Cerrar sesión</p>
-      </button>
+      </button>-->
 
     </div>
   </ion-toolbar>
