--- a/src/app/reserva/detalles-reserva/detalles-reserva.page.html
+++ b/src/app/reserva/detalles-reserva/detalles-reserva.page.html
@@ -13,4 +13,4 @@
 <app-datos-cita [idPerfil]= "reserva.id_empleado"></app-datos-cita>
 </ion-content>
 
-<app-menu [selectedTab]="'reserva'"></app-menu>
+<app-menu [selectedTab]="'agenda'"></app-menu>
