Chore(cambio de diseño en agenda step cuartos )

--- a/src/app/agenda-steps/step-cuartos/step-cuartos.component.html
+++ b/src/app/agenda-steps/step-cuartos/step-cuartos.component.html
@@ -5,7 +5,7 @@
   <ion-grid class="gridCuartos">
     <ion-row>
       <ion-col class="wizard-steps" size="6">
-        <span>Dormitorios</span>
+        <span>Cuartos</span>
         <span class="cantidad">{{ cuartos.dormitorio }}</span>
         <button class="step" (click)="menosCuartos('dormitorio')">
           <ion-icon name="remove-outline"></ion-icon>
